[workspace]
resolver = "2"
members = [
    "script/readme",
    "best_time",
    "climbing_stairs",
    "contains_duplicate",
    "divide_two_int",
    "happy_number",
    "length_of_last_word",
    "longest_consecutive_seq",
    "longest_palindrome",
    "longest-common-string",
    "majority_element",
    "median_of_two_sorted_array",
    "merge_sorted_array",
    "missing_number",
    "palindrome_integer_bool",
    "palindrome_string_bool",
    "pascal_triangle",
    "pascal_triangle_2",
    "plus_one",
    "power_of_two",
    "Remove_duplicate_from_sorted_array",
    "remove_elements",
    "rotate_array",
    "search_insert",
    "single_number",
    "square_root",
    "Two_sum",
    "valid_palindrome",
    "multiply_strings",
    "Contains_duplicates_2",
    "Move_Zeroes",
    "Intersection_of_two_arrays", "third_maximum_number",
]
